 2014-09-22 19:25  skidder 
   M src/jrd/dpm.epp
Fix warnings

 2014-09-18 22:31  hvlad 
   M src/common/classes/fb_atomic.h
   M src/jrd/Relation.cpp
   M src/jrd/Relation.h
   M src/jrd/dpm.epp
   M src/jrd/ods.cpp
   M src/jrd/ods.h
   M src/jrd/pag.cpp
   M src/jrd/pag.h
   M src/jrd/pag_proto.h
   M src/msgs/facilities2.sql
   M src/msgs/messages2.sql
   M src/utilities/gstat/dba.epp
Implement improvement CORE-4556 : Allocate data pages in group of sequential ordered pages (extents)
Validation code will follow

 2014-09-18 15:55  asfernandes 
   M src/jrd/dfw.epp
Fixed CORE-4555 - DDL trigger remains active after dropped.

 2014-09-14 19:46  mapopa 
   M doc/README.build.posix.html
Update FreeBSD section for trunk in doc/README.build.posix.html

 2014-09-14 16:25  mapopa 
   M src/common/isc_sync.cpp
Apply patch from 2.5 branch related to #CORE-3400  http://sourceforge.net/p/firebird/mailman/message/27734396/ 

 2014-09-10 11:55  dimitr 
   M src/remote/protocol.cpp
   M src/remote/protocol.h
Resolved CORE-2897: Don't send full length of field over the wire when field is null.

 2014-09-07 19:37  asfernandes 
   M src/jrd/TempSpace.cpp
   M src/jrd/nbak.cpp
   M src/lock/print.cpp
   M src/yvalve/utl.cpp
   M src/yvalve/why.cpp
Misc.

 2014-09-05 15:21  asfernandes 
   M src/jrd/Database.h
Fixed problem of undefined behaviour when deleting pointer of an incomplete type.

 2014-09-03 13:51  alexpeshkoff 
   M builds/win32/msvc10/engine.vcxproj
   M builds/win32/msvc10/engine.vcxproj.filters
   M src/remote/os/win32/wnet.cpp
Fixed VC10 build

 2014-09-03 11:35  paulbeach 
   M builds/posix/darwin.defaults
   M builds/posix/prefix.darwin_x86_64
3.0 Clang build

 2014-09-02 16:55  alexpeshkoff 
   M doc/sql.extensions/README.ddl_access.txt
   M lang_helpers/gds_codes.ftn
   M lang_helpers/gds_codes.pas
   M src/dsql/DdlNodes.epp
   M src/dsql/DdlNodes.h
   M src/dsql/parse.y
   M src/include/gen/codetext.h
   M src/include/gen/iberror.h
   M src/include/gen/ids.h