@@ -1,3 +1,7 @@
+ 2014-09-26 13:34  mapopa 
+   M doc/README.build.msvc.html
+Update Visual Studio Expresss 20xx Download link
+
  2014-09-22 19:25  skidder 
    M src/jrd/dpm.epp
 Fix warnings
